--- a/src/pages/sta/internal_forces.astro
+++ b/src/pages/sta/internal_forces.astro
@@ -10,7 +10,15 @@ import Enumerate from "../../components/Enumerate.astro"
 import Item from "../../components/Item.astro"
 ---
 <Layout title="Internal Forces">
-<Section title="Internal Forces">
+
+    <div slot="navtree">
+        <ul class='list-group list-group-flush py-0'> 
+          <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='#sign_conventions'>Sign Conventions</a></li> 
+          <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='#general_procedure'>General Procedure</a></li>
+          <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='#general_rules'>General Rules</a></li>
+      </ul>
+      </div>
+<Section title="Internal Forces" id="internal_forces">
 <p>
 Internal forces of a member can be determined by creating an imaginary cut in a member, and then solving for the internal shear force, normal force, and bending moment (which, after the cut, become "external" forces that can be solved for). 
 </p>
@@ -25,14 +33,14 @@ To determine how the internal shear force and bending moment change throughout t
 
 <!-- starts in lecture 19 -->
 
-<SubSection title="Sign Conventions">
+<SubSection title="Sign Conventions" id="sign_conventions">
 
 <Image src='/Statics/IntForceFigures/SignConventions.jpg' width='5'> Sign conventions for internal forces and moments</Image>
 
 </SubSection>
 
 
-<SubSection title="General Procedure">
+<SubSection title="General Procedure" id="general_procedure">
 <p>
 Creating a shear force and bending moment diagram allows us to create a graphical representation of <InlineEquation equation='V' /> and <InlineEquation equation='M' /> as a function of the position along the beam, <InlineEquation equation='x' />. Therefore when creating internal loading diagrams we are trying to write equations for <InlineEquation equation='V(x)' /> and <InlineEquation equation='M(x)' />.
 </p>
@@ -48,11 +56,11 @@ The general procedures for creating shear / bending moment diagrams are:</p>
     <Item>Apply equations of equilibrium to solve for \(V\) and \(M\) as functions of x</Item>
 <Enumerate>
 
-<Image src='/Statics/IntForceFigures/IntLoadRecap.jpg' width='8'><BlueText>Taken from TAM 210 Lecture 23</BlueText></Image>
+<Image src='/Statics/IntForceFigures/IntLoadRecap.jpg' width='8'>Examples of shear and moment diagrams</Image>
 
 </SubSection>
 
-<SubSection title="<RedText>General Rules</RedText>">
+<SubSection title="General Rules" id="general_rules">
 
 <Enumerate>
 	<Item>When there is an external concentrated force or moment, there will be a "jump" in the shear force or bending moment diagram
